--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image" href="/public/Vector.png" />
+    <link rel="icon" type="image" href="/Vector.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Myxellia</title>
   </head>
   <body>
+    
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
